# distributed-systems-assignment

./: CHANGELOG.md  CMakeLists.txt  README.md
application/: config.h
first_implementation/: CMakeLists.txt  base.hpp  config.h  consumer.hpp  helpers.hpp  main.cpp  pch.h  producer.hpp
first_implementation/core/: logger.cpp
second_implementation/: CMakeLists.txt  base.hpp  config.h  consumer.hpp  helpers.hpp  main.cpp  pch.h  producer.hpp  semaphore.hpp
second_implementation/core/: logger.cpp
third_implementation/: CMakeLists.txt  base.hpp  consumer.hpp  helpers.hpp  main.cpp  pch.h  producer.hpp
third_implementation/core/: logger.cpp
